--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.4.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql2": "^3.6.0",
     "p": "^0.2.0",
     "pg": "^8.11.3",
-    "sequelize": "^6.32.1"
+    "prisma": "^5.4.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.1"
